Fix text size scaling on iPhones

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -2,7 +2,6 @@
 
 * {
   -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: auto;
   box-sizing: border-box;
 }
 
